--- a/static_page/css/recommend.css
+++ b/static_page/css/recommend.css
@@ -33,7 +33,7 @@
 
 .zql-content {
   padding: 15px;
-  background: url(./img/bg.png) no-repeat;
+  background: url(../img/bg.png) no-repeat;
   background-size: 100% 100%;
 }
 
