--- a/static_page/css/index.css
+++ b/static_page/css/index.css
@@ -1,3 +1,9 @@
+.clearfix:before,
+.clearfix:after {
+    display: block;
+    content: '';
+    clear: both;
+}
 body {
     position: relative;
     height: 100%;
