--- a/static_page/css/recommend.css
+++ b/static_page/css/recommend.css
@@ -68,7 +68,12 @@
   justify-content: space-between;
 }
 
-.zql-content .zql-sings .zql-title h3 img {
+.zql-content .zql-sings .zql-title h3 {
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.zql-content .zql-sings .zql-title h3  img {
   margin-right: 5px;
   vertical-align: middle;
 }
