--- a/src/assets/css/wyf-song.css
+++ b/src/assets/css/wyf-song.css
@@ -21,6 +21,7 @@ body{
     width: 100%;
     padding-top: 15px;
     /*padding-bottom: 25px;*/
+    z-index: 100;
 }
 .yf-choose i{
     position: absolute;
@@ -49,43 +50,43 @@ body{
 .yf-choose ul li+li{
     margin-left: 2%;
 }
-.yf-choose ul li.active{
-    background-color: #413e3c;
-}
 
 
-.yf-main{
-    /*height: 525px;*/
-    margin-top: 50px;
-    padding-bottom: 30px;
+
+
+.yf-view{
     text-align: center;
 }
 
-.yf-main .yf-title{
-    padding-bottom: 15px;
-    font-size: 20px;
+.yf-view img{
+    display: inline-block;    
+    margin-top: 40px;
+    width: 300px;
+    height: 300px;
+}
+.yf-view .song-title{
+    margin-top: 50px;
+    font-size: 24px;
     font-weight: bold;
 }
-.yf-main .yf-author{
-    padding-bottom: 30px;
-    font-size: 15px;
-}
-.yf-main p{
-    line-height: 35px;
+.yf-view .song-author{
+    margin-top: 20px;
     font-size: 16px;
-    
 }
-
 
 
 .yf-opation{
     display: flex;
     justify-content: space-around;
-    
+    margin-top: 50px;
 }
 .yf-opation a{
     font-size: 20px;
 }
+
+
+
+
 
 
 .yf-footer{
@@ -144,4 +145,3 @@ body{
     font-size: 30px;
     color: #b30000;
 }
-
