--- a/src/assets/css/yf-singer.css
+++ b/src/assets/css/yf-singer.css
@@ -1,150 +1,194 @@
-html,body{
-    height: 100%;
-}
-body{
-    position: relative;
-    background: url(../img/bg.png) no-repeat;
-    background-size: cover;
-}
-.yf-view{
-    width: 100%;  
-    height: 100%;  
-    height: auto;
-}
-.container{
-    width: 90%;
-    margin: 0 auto;
-}
-.yf-choose{
-    position: relative;
-    width: 100%;
-    padding-top: 30px;
-    padding-bottom: 50px;
-}
-.yf-choose i{
-    position: absolute;
-    top: 30px; 
-    left: 0;
-    width: 50px;
-    height: 50px;
-    background-color: #928b86;
-    line-height: 50px;
-    text-align: center;
-    color: white;
-    font-size: 36px;
-    border-radius: 25px;
+html,
+body {
+  height: 100%;
 }
 
-.yf-choose ul{
-    text-align: center;
-}
-.yf-choose ul li{
-    display: inline-block;
-    width: 30px;
-    height: 30px;
-    background-color: white;
-    border-radius: 15px;
-}
-.yf-choose ul li+li{
-    margin-left: 2%;
-}
-.yf-choose ul li.active{
-    background-color: #413e3c;
+body {
+  position: relative;
+  background: url(../img/bg.png) no-repeat;
+  background-size: cover;
 }
 
-
-.yf-main{
-    height: 1050px;
-    margin-top: 100px;
-    padding-bottom: 60px;
-    text-align: center;
-}
-.yf-main .yf-singer{
-    display: flex;
+.yf-view {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  height: auto;
 }
 
-.yf-main .yf-singer .yf-music{
-    height: 202px;
-    margin-left: 50px;
-}
-.yf-main .yf-singer .yf-music .music-top{
-    height: 50%;
-    line-height: 100px;
-    font-size: 40px;
-}
-.yf-main .yf-singer .yf-music .music-bottom{
-    height: 50%;
-    line-height: 100px;
-    font-size: 40px;
+.container {
+  width: 90%;
+  margin: 0 auto;
 }
 
-.yf-main p{
-    margin-top: 200px;
+.yf-choose {
+  position: relative;
+  width: 100%;
+  padding-top: 15px;
+  /*padding-bottom: 25px;*/
 }
 
-.yf-opation{
-    display: flex;
-    justify-content: space-around;
-    padding-bottom: 100px;
+.yf-choose i {
+  position: absolute;
+  top: 15px;
+  left: 5%;
+  width: 25px;
+  height: 25px;
+  background-color: #928b86;
+  line-height: 25px;
+  text-align: center;
+  color: white;
+  font-size: 18px;
+  border-radius: 12px;
 }
-.yf-opation a{
-    font-size: 40px;
+
+.yf-choose ul {
+  text-align: center;
+}
+
+.yf-choose ul li {
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  background-color: white;
+  border-radius: 8px;
+}
+
+.yf-choose ul li+li {
+  margin-left: 2%;
 }
 
 
-.yf-footer{
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    padding-bottom: 50px;
-    padding-top: 50px;
-    background-color: rgba(255, 255, 255,.5);
+
+.yf-main {
+  /*height: 525px;*/
+  margin-top: 50px;
+  padding-bottom: 30px;
+  text-align: center;
 }
+
+.yf-main .yf-title {
+  padding-bottom: 15px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.yf-main .yf-author {
+  padding-bottom: 30px;
+  font-size: 15px;
+}
+
+.yf-main p {
+  line-height: 35px;
+  font-size: 16px;
+}
+
+.yf-opation {
+  position: relative;
+  top: 200px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.yf-opation a {
+  font-size: 20px;
+}
+
+.yf-footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding-bottom: 25px;
+  padding-top: 25px;
+  background-color: rgba(255, 255, 255, .5);
+}
+
+
 /*.yf-footer .container{
     width: 90%;
 }*/
-.yf-footer .yf-rate{
-    display: flex;
-    justify-content: space-between;
-    padding-top: 50px;
-    padding-bottom: 50px;
-}
-.yf-footer .yf-rate .now-rate{
-    font-size: 40px;
-    color: #b30000;
-}
-.yf-footer .yf-rate .all-rate{
-    font-size: 40px;
-    color: #b30000;
+
+.yf-footer .yf-rate {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
 
-.yf-footer .yf-rate .view-rate{
-    position: relative;
-    width: 70%;
-    height: 10px;
-    margin-top: 15px;
-    background-color: white;
-}
-.yf-footer .yf-rate .view-rate .zero{
-    position: absolute;
-    top: 50%;
-    left: 0;
-    height: 30px;
-    width: 30px;
-    border: 8px solid #d67c6a;
-    background-color: red;
-    transform: translateY(-50%);
-    border-radius: 15px;
+.yf-footer .yf-rate .now-rate {
+  font-size: 20px;
+  color: #b30000;
 }
 
-
-.yf-footer .yf-control{
-    display: flex;
-    justify-content: space-between;
-    
+.yf-footer .yf-rate .all-rate {
+  font-size: 20px;
+  color: #b30000;
 }
-.yf-footer .yf-control a{
-    font-size: 60px;
-    color: #b30000;
+
+.yf-footer .yf-rate .view-rate {
+  position: relative;
+  width: 70%;
+  height: 5px;
+  margin-top: 8px;
+  background-color: white;
+}
+
+.yf-footer .yf-rate .view-rate .zero {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  height: 16px;
+  width: 16px;
+  border: 4px solid #d67c6a;
+  background-color: red;
+  transform: translateY(-50%);
+  border-radius: 8px;
+}
+
+.yf-footer .yf-control {
+  display: flex;
+  justify-content: space-between;
+}
+
+.yf-footer .yf-control a {
+  font-size: 30px;
+  color: #b30000;
+}
+
+.yf-main {
+  /*height: 1050px;*/
+  margin-top: 50px;
+  padding-bottom: 30px;
+  text-align: center;
+}
+
+.yf-main .yf-singer img {
+  width: 100px;
+  height: 100px;
+}
+
+.yf-main .yf-singer {
+  display: flex;
+}
+
+.yf-main .yf-singer .yf-music {
+  height: 100px;
+  margin-left: 25px;
+}
+
+.yf-main .yf-singer .yf-music .music-top {
+  height: 50%;
+  line-height: 50px;
+  font-size: 20px;
+}
+
+.yf-main .yf-singer .yf-music .music-bottom {
+  height: 50%;
+  line-height: 50px;
+  font-size: 20px;
+}
+
+.yf-main p {
+  margin-top: 100px;
 }
