--- a/src/assets/css/zql-recommend.css
+++ b/src/assets/css/zql-recommend.css
@@ -5,7 +5,6 @@
 .zql-hot {
   display: flex;
   justify-content: space-between;
-  margin-top: 45px;
 }
 
 .zql-hot li {
@@ -14,7 +13,7 @@
   text-align: center;
 }
 
-.zql-hot li.active {
+.router-link-exact-active.active {
   border-bottom: 4px solid #b30000;
 }
 
