--- a/static_page/css/yf-singer.css
+++ b/static_page/css/yf-singer.css
@@ -7,6 +7,7 @@ body{
     background-size: cover;
 }
 .yf-view{
+    position: relative;
     width: 100%;  
     height: 100%;  
     height: auto;
@@ -18,21 +19,21 @@ body{
 .yf-choose{
     position: relative;
     width: 100%;
-    padding-top: 30px;
-    padding-bottom: 50px;
+    padding-top: 15px;
+    /*padding-bottom: 25px;*/
 }
 .yf-choose i{
     position: absolute;
-    top: 30px; 
-    left: 0;
-    width: 50px;
-    height: 50px;
+    top: 15px; 
+    left: 5%;
+    width: 25px;
+    height: 25px;
     background-color: #928b86;
-    line-height: 50px;
+    line-height: 25px;
     text-align: center;
     color: white;
-    font-size: 36px;
-    border-radius: 25px;
+    font-size: 18px;
+    border-radius: 12px;
 }
 
 .yf-choose ul{
@@ -40,10 +41,10 @@ body{
 }
 .yf-choose ul li{
     display: inline-block;
-    width: 30px;
-    height: 30px;
+    width: 16px;
+    height: 16px;
     background-color: white;
-    border-radius: 15px;
+    border-radius: 8px;
 }
 .yf-choose ul li+li{
     margin-left: 2%;
@@ -54,41 +55,39 @@ body{
 
 
 .yf-main{
-    height: 1050px;
-    margin-top: 100px;
-    padding-bottom: 60px;
+    /*height: 525px;*/
+    margin-top: 50px;
+    padding-bottom: 30px;
     text-align: center;
 }
-.yf-main .yf-singer{
-    display: flex;
-}
 
-.yf-main .yf-singer .yf-music{
-    height: 202px;
-    margin-left: 50px;
+.yf-main .yf-title{
+    padding-bottom: 15px;
+    font-size: 20px;
+    font-weight: bold;
 }
-.yf-main .yf-singer .yf-music .music-top{
-    height: 50%;
-    line-height: 100px;
-    font-size: 40px;
+.yf-main .yf-author{
+    padding-bottom: 30px;
+    font-size: 15px;
 }
-.yf-main .yf-singer .yf-music .music-bottom{
-    height: 50%;
-    line-height: 100px;
-    font-size: 40px;
-}
-
 .yf-main p{
-    margin-top: 200px;
+
+    line-height: 35px;
+    font-size: 16px;
+    
 }
+
+
 
 .yf-opation{
+    position: relative;
+    top: 200px;
     display: flex;
     justify-content: space-around;
-    padding-bottom: 100px;
+    
 }
 .yf-opation a{
-    font-size: 40px;
+    font-size: 20px;
 }
 
 
@@ -97,8 +96,8 @@ body{
     bottom: 0;
     left: 0;
     width: 100%;
-    padding-bottom: 50px;
-    padding-top: 50px;
+    padding-bottom: 25px;
+    padding-top: 25px;
     background-color: rgba(255, 255, 255,.5);
 }
 /*.yf-footer .container{
@@ -107,35 +106,35 @@ body{
 .yf-footer .yf-rate{
     display: flex;
     justify-content: space-between;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding-top: 25px;
+    padding-bottom: 25px;
 }
 .yf-footer .yf-rate .now-rate{
-    font-size: 40px;
+    font-size: 20px;
     color: #b30000;
 }
 .yf-footer .yf-rate .all-rate{
-    font-size: 40px;
+    font-size: 20px;
     color: #b30000;
 }
 
 .yf-footer .yf-rate .view-rate{
     position: relative;
     width: 70%;
-    height: 10px;
-    margin-top: 15px;
+    height: 5px;
+    margin-top: 8px;
     background-color: white;
 }
 .yf-footer .yf-rate .view-rate .zero{
     position: absolute;
     top: 50%;
     left: 0;
-    height: 30px;
-    width: 30px;
-    border: 8px solid #d67c6a;
+    height: 16px;
+    width: 16px;
+    border: 4px solid #d67c6a;
     background-color: red;
     transform: translateY(-50%);
-    border-radius: 15px;
+    border-radius: 8px;
 }
 
 
@@ -145,6 +144,40 @@ body{
     
 }
 .yf-footer .yf-control a{
-    font-size: 60px;
+    font-size: 30px;
     color: #b30000;
 }
+
+.yf-main{
+    /*height: 1050px;*/
+    margin-top: 50px;
+    padding-bottom: 30px;
+    text-align: center;
+}
+.yf-main .yf-singer img{
+    width: 100px;
+    height: 100px;
+}
+.yf-main .yf-singer{
+    display: flex;
+}
+
+.yf-main .yf-singer .yf-music{
+    height: 100px;
+    margin-left: 25px;
+}
+.yf-main .yf-singer .yf-music .music-top{
+    height: 50%;
+    line-height: 50px;
+    font-size: 20px;
+}
+.yf-main .yf-singer .yf-music .music-bottom{
+    height: 50%;
+    line-height: 50px;
+    font-size: 20px;
+}
+
+.yf-main p{
+    margin-top: 100px;
+}
+
