--- a/src/assets/css/wyf-song.css
+++ b/src/assets/css/wyf-song.css
@@ -71,6 +71,7 @@ body{
 }
 .yf-view .song-author{
     margin-top: 20px;
+    margin-bottom: 50px;
     font-size: 16px;
 }
 
@@ -78,7 +79,7 @@ body{
 .yf-opation{
     display: flex;
     justify-content: space-around;
-    margin-top: 50px;
+    /*margin-top: 50px;*/
 }
 .yf-opation a{
     font-size: 20px;
