--- a/src/assets/css/wl-dynamic.css
+++ b/src/assets/css/wl-dynamic.css
@@ -1,7 +1,4 @@
-.main {
-}
-
-
+.main {}
 
 .wl-dynamic .wl-banner {
     height: 150px;
@@ -182,18 +179,14 @@
 .wl-dynamic .wl-hot-topic .wl-topic-list .wl-share-imgs .imgs-right {
     display: flex;
     flex-direction: column;
-    align-content: space-between;
-    width: 45%;
+    justify-content: space-between;
+    flex-basis: 45%;
     height: 100%;
 }
 
 .wl-dynamic .wl-hot-topic .wl-topic-list .wl-share-imgs .imgs-right a {
     width: 100%;
     height: 45%;
-}
-
-.wl-dynamic .wl-hot-topic .wl-topic-list .wl-share-imgs .imgs-right a+a {
-    margin-top: 10%;
 }
 
 .wl-dynamic .wl-hot-topic .wl-topic-list .wl-share-imgs .imgs-right img {
