--- a/static_page/css/wl-dynamic.css
+++ b/static_page/css/wl-dynamic.css
@@ -16,7 +16,7 @@ author:hubvues
     height: 100%;
     background: url(../img/wl-singer-bg.png) no-repeat;
     background-size: cover;
-    filter: blur(2px);
+    filter: blur(6px);
     z-index: -10;
 }
 
@@ -195,18 +195,14 @@ author:hubvues
 .wl-dynamic .wl-hot-topic .wl-topic-list .wl-share-imgs .imgs-right {
     display: flex;
     flex-direction: column;
-    align-content: space-between;
-    width: 45%;
+    justify-content: space-between;
+    flex-basis: 45%;
     height: 100%;
 }
 
 .wl-dynamic .wl-hot-topic .wl-topic-list .wl-share-imgs .imgs-right a {
     width: 100%;
     height: 45%;
-}
-
-.wl-dynamic .wl-hot-topic .wl-topic-list .wl-share-imgs .imgs-right a+a {
-    margin-top: 10%;
 }
 
 .wl-dynamic .wl-hot-topic .wl-topic-list .wl-share-imgs .imgs-right img {
