--- a/src/assets/scss/_mixin.scss
+++ b/src/assets/scss/_mixin.scss
@@ -3,6 +3,20 @@
   margin-right: auto;
 }
 
+@mixin textEllipsis {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+@mixin textLine {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 @mixin clearfix {
   &:after,
   &:before {
