--- a/src/assets/scss/scssBypages/lists/lists.scss
+++ b/src/assets/scss/scssBypages/lists/lists.scss
@@ -1,65 +1,101 @@
 /*lists页面样式
 *  作者：Lewis
 */
+
 .zql-lists {
-  .zql-title {
-    display: flex;
-    padding: 15px;
-    align-items: center;
-    justify-content: space-between;
-    h3 {
-      font-size: 20px;
-      font-weight: bold;
-      img {
-        margin-right: 5px;
-        vertical-align: middle;
-      }
-      i {
-        color: #9c9d9a;
-        margin-left: 5px;
-      }
-    }
-    p {
-      color: #9c9d9a;
-      font-size: 18px;
-      a {
-        margin: 0 5px;
-        font-size: 18px;
-        color: #9c9d9a;
-      }
-      a.active {
-        color: #b30000;
-      }
-    }
-  }
-  .zql-lists-items {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    figure {
-      width: 48%;
-      margin-bottom: 15px;
-      .zql-lists-pic {
-        position: relative;
-        img {
-          width: 100%;
+    .zql-title {
+        display: flex;
+        padding: 15px;
+        align-items: center;
+        justify-content: space-between;
+        h3 {
+            font-size: 20px;
+            font-weight: bold;
+            img {
+                margin-right: 5px;
+                vertical-align: middle;
+            }
+            i {
+                color: #9c9d9a;
+                margin-left: 5px;
+            }
         }
-        i {
-          position: absolute;
-          bottom:20px;
-          right: 20px;
-          color: #fff;
-        }
-      }
-      figcaption {
         p {
-          margin: 5px 0;
-          font-size: 16px;
+            color: #9c9d9a;
+            font-size: 18px;
+            a {
+                margin: 0 5px;
+                font-size: 18px;
+                color: #9c9d9a;
+            }
+            a.active {
+                color: #b30000;
+            }
         }
-        span {
-          font-size: 13px;
-        }
-      }
     }
-  }
+}
+
+//hubvues
+.zql-songs-items {
+    width: 100%;
+    .wl-list {
+        display: flex;
+        flex-direction: column;
+        // justify-content: space-around;
+        flex-wrap: wrap;
+        figure {
+            display: flex;
+            justify-content: space-between;
+            // margin-bottom: 15px;
+            .zql-lists-pic {
+                position: relative;
+                img {
+                    width: 100%;
+                }
+                i {
+                    position: absolute;
+                    bottom: 20px;
+                    right: 20px;
+                    color: #fff;
+                }
+            }
+            figcaption {
+                p {
+                    margin: 5px 0;
+                    font-size: 16px;
+                }
+                span {
+                    font-size: 13px;
+                }
+            }
+        }
+    }
+    .title {
+        margin-top: 10px;
+        font-size: 18px;
+    }
+    .wl-global {
+        padding-top: 10px;
+        .global-list {
+            display: flex;
+            width: 33%;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            margin-top: 15px;
+            a {
+                display: block;
+                position: relative;
+                width: 100%;
+                img {
+                    width: 100%;
+                }
+                span {
+                    position: absolute;
+                    bottom: 6px;
+                    left: 6px;
+                    color: #fff;
+                }
+            }
+        }
+    }
 }
