--- a/src/assets/scss/scssBypages/lists/lists.scss
+++ b/src/assets/scss/scssBypages/lists/lists.scss
@@ -7,6 +7,8 @@
             display: flex;
             justify-content: flex-start;
             align-items: center;
+            padding-top: 2px;
+            border-bottom: 1px solid #d7d7d7;
             .wl-songs {
                 position: relative;
                 width: 33%;
@@ -24,10 +26,10 @@
                 width: 60%;
                 display: flex;
                 flex-direction: column;
-                //  align-items: center;
                 align-content: space-between;
                 li {
                     margin: 10px;
+                    color: #333;
                     font-size: 14px;
                 }
             }
@@ -35,7 +37,9 @@
     }
     .title {
         margin: 20px 0;
+        border-left: 3px solid #b30000;
         font-size: 18px;
+        text-indent: 5px;
     }
     .wl-global {
         display: flex;
@@ -43,9 +47,8 @@
         justify-content: space-between;
         padding-top: 10px;
         .global-list {
-            width: 33%;
             flex-basis: 33%;
-            margin-top: 15px;
+            margin-bottom: 15px;
             a {
                 display: block;
                 position: relative;
@@ -59,10 +62,10 @@
                     left: 6px;
                     color: #fff;
                 }
-                p {
-                    margin-top: 10px;
-                    font-size: 14px;
-                }
+            }
+            p {
+                margin-top: 10px;
+                font-size: 14px;
             }
         }
     }
