--- a/src/scss/_H_user.scss
+++ b/src/scss/_H_user.scss
@@ -1,11 +1,12 @@
 .jem-main {
   width: 100%;
-  height: 94vh;
+  height: 100vh;
   margin-top: 4rem;
   background: url('./my-bg.png') no-repeat center;
   background-size: cover;
   .jem-my-content {
     display: flex;
+    height: 100%;
     background-color: rgba(255, 255, 255, .4);
     flex-wrap: wrap;
     justify-content: center;
@@ -61,10 +62,10 @@
         font-weight: bold;
         text-indent: 1rem;
         flex-grow: 8;
-        a{
+        a {
           line-height: 8rem;
-        font-size: 2rem;
-        font-weight: bold;
+          font-size: 2rem;
+          font-weight: bold;
         }
         span {
           font-size: 1rem;
@@ -143,6 +144,7 @@
         }
       }
       .words {
+        height: 3rem;
         font-size: 1rem;
         text-align: center;
         img {
