--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -86,9 +86,13 @@ body {
 
 .main-bg {
     position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     z-index: -99;
+    background: rgba(255, 255, 255, 0.5);
+    filter:blur(10px);
 }
 
 
