--- a/src/assets/scss/scssBypages/songSheet/songSheet.scss
+++ b/src/assets/scss/scssBypages/songSheet/songSheet.scss
@@ -86,7 +86,7 @@
     display: flex;
     justify-content: space-between;
     padding: 10px;
-    background-color: white;
+    // background-color: white;
     .all-song {
       height: 50%;
       padding: 5px 10px;
@@ -114,7 +114,7 @@
     justify-content: space-between;
     flex-wrap: wrap;
     width: 100%;
-    background-color: white;
+    // background-color: white;
     .songs {
       width: 49.5%;
       .img-wrap {
