--- a/src/assets/css/wyf-music.css
+++ b/src/assets/css/wyf-music.css
@@ -5,7 +5,7 @@ body {
 
 body {
   position: relative;
-  background: url(../img/bg.png) no-repeat;
+  /*background: url(../img/bg.png) no-repeat;*/
   background-size: cover;
 }
 
