--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -48,87 +48,97 @@
 //   }
 // }
 .clearfix {
-    @include clearfix;
+  @include clearfix;
 }
 
 .textEllipsis {
-    @include textEllipsis;
+  @include textEllipsis;
 }
 
 .textLine {
-    @include textLine;
+  @include textLine;
 }
 
 .pull-left {
-    float: left;
+  float: left;
 }
 
 .pull-right {
-    float: right;
+  float: right;
 }
 
 .pos-f {
-    position: fixed;
+  position: fixed;
 }
 
 .pos-a {
-    position: absolute;
+  position: absolute;
 }
 
 .pos-r {
-    position: relative;
+  position: relative;
 }
 
 body {
-    position: relative;
-    height: 100%;
+  position: relative;
+  height: 100%;
+}
+
+.mark {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background: rgba(255, 255, 255, 0.6);
+  filter: blur(10px);
 }
 
 .main-bg {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -99;
-    background: rgba(255, 255, 255, 0.5);
-    filter:blur(10px);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -2;
+  filter: blur(10px);
 }
 
 
 /****************** header start ********************/
 
 .header {
-    width: 100%;
-    background: #b30000;
-    color: white;
-    .navbar {
-        display: flex;
-        padding-top: 32px;
-        padding-bottom: 15px;
-        justify-content: space-between;
-        li {
-            text-align: left;
-            &:nth-of-type(1),
-            &:nth-of-type(5) {
-                i {
-                    margin-top: -7px;
-                    font-size: 32px;
-                }
-            }
-            i {
-                font-size: 20px;
-            }
-            a {
-                color: white;
-                font-size: 20px;
-                opacity: .5;
-            }
-            .router-link-exact-active.active {
-                opacity: 1;
-            }
+  width: 100%;
+  background: #b30000;
+  color: white;
+  .navbar {
+    display: flex;
+    padding-top: 32px;
+    padding-bottom: 15px;
+    justify-content: space-between;
+    li {
+      text-align: left;
+      &:nth-of-type(1),
+      &:nth-of-type(5) {
+        i {
+          margin-top: -7px;
+          font-size: 32px;
         }
+      }
+      i {
+        font-size: 20px;
+      }
+      a {
+        color: white;
+        font-size: 20px;
+        opacity: .5;
+      }
+      .router-link-exact-active.active {
+        opacity: 1;
+      }
     }
+  }
 }
 
 
@@ -138,42 +148,42 @@ body {
 /****************** footer end ********************/
 
 .footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    padding: 5px 10px;
-    background: rgba(255, 255, 255, .7);
-    z-index: 99;
-    .footer-img {
-        float: left;
-        margin-right: 11px;
-        img {
-            width: 36px;
-            height: 36px;
-            margin-top: 5px;
-        }
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  padding: 5px 10px;
+  background: rgba(255, 255, 255, .7);
+  z-index: 99;
+  .footer-img {
+    float: left;
+    margin-right: 11px;
+    img {
+      width: 36px;
+      height: 36px;
+      margin-top: 5px;
     }
-    .song-main {
-        float: left;
-        h2 {
-            line-height: 26px;
-            font-size: 16px;
-            font-weight: bold;
-        }
-        span {
-            color: #2b2a29;
-            font-size: 12px;
-        }
+  }
+  .song-main {
+    float: left;
+    h2 {
+      line-height: 26px;
+      font-size: 16px;
+      font-weight: bold;
     }
-    .icons {
-        float: right;
-        margin-top: 13px;
-        i {
-            margin-left: 20px;
-            color: #b30000;
-            font-size: 20px;
-        }
+    span {
+      color: #2b2a29;
+      font-size: 12px;
     }
+  }
+  .icons {
+    float: right;
+    margin-top: 13px;
+    i {
+      margin-left: 20px;
+      color: #b30000;
+      font-size: 20px;
+    }
+  }
 }
 
 
